--- a/DesignPatternsFramwork/.project
+++ b/DesignPatternsFramwork/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DesignPatternsFramwork</name>
+	<name>DesignPatternsFramework</name>
 	<comment></comment>
 	<projects>
 	</projects>
